--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
-<body style='margin : 0px; overflow: scroll;'>
-  <a-scene embedded arjs='patternRatio: 0.7' style='width: 50%; height: 50%;'>
-      <a-marker type='pattern' url='./pattern-marker.patt'>
-      <a-gltf-model src="adamHead.gltf"></a-gltf-model>
-    </a-marker>    
-    <a-entity camera></a-entity>
-  </a-scene>
+<link rel="stylesheet" href="style.css">
+<body>
+  <header>
+    <h1>Daddy's Home</h1>
+  </header>
+  <div class="frame-container">
+    <iframe src="new.html" frameborder="0"></iframe>
+  </div>
 </body>
 </html>
