changes back to box

--- a/new.html
+++ b/new.html
@@ -13,7 +13,8 @@
         renderer="logarithmicDepthBuffer: true;"
       >
         <a-marker type="pattern" url="./pattern-marker.patt">
-          <a-entity gltf-model="adamHead.gltf"></a-entity>
+            <a-box ></a-box>
+
         </a-marker>
         <a-entity camera></a-entity>
       </a-scene>
