--- a/new.html
+++ b/new.html
@@ -12,7 +12,7 @@
         vr-mode-ui="enabled: false;"
         renderer="logarithmicDepthBuffer: true;"
       >
-        <a-marker type="pattern" url="./pattern-marker.patt">
+        <a-marker-camera preset='hiro'>
             <a-box ></a-box>
 
         </a-marker>
