--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
         renderer="logarithmicDepthBuffer: true;"
       >
         <a-marker type="pattern" url="./pattern-marker.patt">
-            <a-box ></a-box>
+            <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 
         </a-marker>
         <a-entity camera></a-entity>
