--- a/new.html
+++ b/new.html
@@ -8,9 +8,7 @@
     <div id="ar-container">
       <a-scene
         embedded
-        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;patternRatio: 0.7;"
-        vr-mode-ui="enabled: false;"
-        renderer="logarithmicDepthBuffer: true;"
+        arjs="patternRatio: 0.7;"
       >
         <a-marker type="pattern" url="./pattern-marker.patt">
             <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
