--- a/new.html
+++ b/new.html
@@ -4,8 +4,8 @@
 <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded >
-    <a-marker type='pattern' url='./pattern-marker.patt' smooth="true">
-       <a-box position='0 0.5 0' material='opacity: 0.8;'></a-box>
+    <a-marker type='pattern' url='./pattern-marker.patt'>
+       <a-box position='0 0.5 0' material='opacity: 1;'></a-box>
     </a-marker>    
     <a-entity camera></a-entity>
   </a-scene>
