--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded >
+  <a-scene embedded arjs='patternRatio: 0.4'>
     <a-marker type='pattern' url='./pattern-marker.patt'>
        <a-box position='0 0.5 0' material='opacity: 1;'></a-box>
     </a-marker>    
