--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>AR.js Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/ar.js@2.3.1/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/ar.js@2.3.1/aframe-ar.js"></script>
-  </head>
+    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+    <!-- include ar.js for A-Frame -->
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+      </head>
   <body>
     <!-- Add your AR content here -->
     <a-scene embedded arjs>
