--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Add your AR content here -->
     <a-scene embedded arjs>
-      <a-marker url="pattern.patt">
+      <a-marker preset="hiro">
         <a-box position="0 0.5 0" material="color: red;"></a-box>
       </a-marker>
       <a-camera-static></a-camera-static>
