--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <title>AR.js Example</title>
     <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-    <!-- include ar.js for A-Frame -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
-    <!-- Add your AR content here -->
     <a-scene embedded arjs>
-      <a-marker preset="hiro">
+      <a-marker-camera preset="hiro">
         <a-box position="0 0.5 0"></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
-
+      </a-marker-camera>
     </a-scene>
   </body>
 </html>
