--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <a-scene embedded arjs>
-      <a-marker-camera preset="hiro">
-        <a-box position="0 0.5 0"></a-box>
-      </a-marker-camera>
+      <a-marker-camera preset="hiro"> </a-marker-camera>
+      <a-box position="0 0.5 0"></a-box>
     </a-scene>
   </body>
 </html>
