--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   </head>
   <body>
     <a-scene embedded arjs>
-      <a-marker preset="hiro"> 
+      <a-marker-camera preset="hiro"> 
         
         <a-box position="0 0.5 0"></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
+      </a-marker-camera>
     </a-scene>
   </body>
 </html>
