--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene embedded arjs>
       <a-marker-camera preset="hiro"> 
         
-        <a-box position="0 0.5 0"></a-box>
+        <a-box position="0 0.5 0" scale="0.5 0.5 0.5"></a-box>
       </a-marker-camera>
     </a-scene>
   </body>
