--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a-asset-item id="tree" src="./phoenix_bird/scene.gltf"></a-asset-item>
     </a-assets>
 
-    <a-scene>
+    <a-scene embedded arjs>
       <a-marker-camera preset="hiro">
         <a-entity gltf-model="##tree"></a-entity>
       </a-marker-camera>
