--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
-    <a-assets>
-      <a-asset-item id="tree" src="./phoenix_bird/scene.gltf"></a-asset-item>
-    </a-assets>
 
     <a-scene embedded arjs>
       <a-marker-camera preset="hiro">
-        <a-entity gltf-model="##tree"></a-entity>
+        <a-box position='0 0.5 0'></a-box>
+
       </a-marker-camera>
     </a-scene>
   </body>
 </html>
+
