--- a/ar-file.html
+++ b/ar-file.html
@@ -21,7 +21,7 @@
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
-                    src="assets/asset.gltf"
+                    src="assets/asset.glb"
                 ></a-asset-item>
             </a-assets>
 
@@ -37,7 +37,7 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.002078034258399037 0.002078034258399037 0.002078034258399037"
+                    scale="1.0780428574277967 1.0780428574277967 1.0780428574277967"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
