--- a/ar-file.html
+++ b/ar-file.html
@@ -38,6 +38,7 @@
                 <a-entity
                     id="bowser-model"
                     scale="1.0780428574277967 1.0780428574277967 1.0780428574277967"
+                    rotate="90 0 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
