--- a/ar-file.html
+++ b/ar-file.html
@@ -37,7 +37,7 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="1.0780428574277967 1.0780428574277967 1.0780428574277967"
+                    scale="1 1 1"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
